renderização objetos json

--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -2,12 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
+.Livro_imagem {
   height: 40vmin;
-  pointer-events: none;
-
+  border: 1px solid rgba(0, 0, 0, 0.288);
 }
-
+.Livro_imagem:hover{
+  transform: scale(1.5);
+  transition: .2s ease-in;
+}
+.container {
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: center;
+} 
 
 .cardBook{
   padding: 5px;
@@ -15,4 +23,7 @@
   width: 300px;
   border-radius: 10px;
   margin: 10px;
+  align-items: center;
 }
+
+
